--- a/Location.css
+++ b/Location.css
@@ -330,3 +330,107 @@ body {
 		);
 	}
 }
+
+
+
+
+
+/* Footer */
+
+
+.footer-dark {
+    padding: 50px ;
+    color: #f0f9ff;
+    background-color: #2228316b;
+    margin-top: 70px;
+}
+
+.footer-dark .row {
+    padding: 30px;
+}
+
+.footer-dark ul {
+    list-style: none;
+    color: white;
+
+}
+
+
+.footer-dark ul a {
+    text-decoration: none;
+    color: white;
+    font-family: "Poppins", serif;
+    margin-bottom: 12px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.footer-dark ul a:hover {
+    opacity: 0.6;
+}
+
+@media (max-width:767px) {
+    .footer-dark .item:not(.social) {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+}
+
+.footer-dark .item.text {
+    margin-bottom: 36px;
+}
+
+@media (max-width:767px) {
+    .footer-dark .item.text {
+        margin-bottom: 0;
+    }
+}
+
+.footer-dark .item.text p {
+    opacity: 0.6;
+    margin-bottom: 0;
+}
+
+.footer-dark .item.social {
+    text-align: center;
+}
+
+@media (max-width:991px) {
+    .footer-dark .item.social {
+        text-align: center;
+        margin-top: 20px;
+    }
+}
+
+.footer-dark .item.social>a {
+    font-size: 20px;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4);
+    margin: 0 8px;
+    color: #fff;
+    opacity: 0.75;
+}
+
+.footer-dark .item.social>a:hover {
+    opacity: 0.9;
+}
+
+.footer-dark .copyright {
+    text-align: center;
+    padding-top: 24px;
+    opacity: 0.3;
+    font-size: 13px;
+    margin-bottom: 0;
+}
+.container .copy{
+    margin-top: -30px;
+    margin-bottom: -30px;
+    text-align: center;
+}
+
+
