--- a/select_seat.css
+++ b/select_seat.css
@@ -225,3 +225,22 @@ select {
     background-color: #28a745;
     cursor: not-allowed;
 }
+
+/* Legend Styling */
+.legend .legend-item {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    color: white;
+    font-family: "Poppins", serif;
+
+}
+
+.legend .legend-item span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    border-radius: 3px;
+}
+
