--- a/select_seat.css
+++ b/select_seat.css
@@ -244,3 +244,29 @@ select {
     border-radius: 3px;
 }
 
+
+
+.rounded-pill {
+    border-radius: 50px !important;
+}
+
+.d-flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+#selected-seats {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+#total-price {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+.bi-chevron-right {
+    font-size: 1.25rem;
+    color: #fff;
+}
