--- a/select_seat.css
+++ b/select_seat.css
@@ -207,6 +207,14 @@ select {
     border: 1px solid #999;
 }
 
+.seat:nth-of-type(2){
+    margin-right: 18px;
+}
+
+.seat:nth-last-of-type(2){
+    margin-left: 18px;
+}
+
 .seat.available {
     background-color: #ccc;
 }
@@ -243,7 +251,6 @@ select {
     margin-right: 5px;
     border-radius: 3px;
 }
-
 
 
 .rounded-pill {
