--- a/Upcoming_movies.css
+++ b/Upcoming_movies.css
@@ -126,3 +126,56 @@ body {
     font-size: 15px;
     margin-top: 10px;
 }
+/* Card */
+
+
+
+
+
+
+
+.card-custom {
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(55, 50, 50, 0.1);
+    background-color: #d9d9d918;
+}
+
+.card-custom .col .img-fluid {
+    min-width: auto;
+    height: 50vh;
+
+}
+
+.profile-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.bottom-text {
+    font-size: 12px;
+}
+
+h5 {
+    font-size: 20px;
+    font-family: "Jomhuria", serif;
+    font-weight: 400;
+    font-size: 110px;
+    color: white;
+    margin-left: 60px;
+    margin-top: 40px;
+}
+
+p {
+    font-size: 12px;
+    color: white;
+    margin-left: 60px;
+    font-family: "Poppins", serif;
+    font-size: 15px;
+}
+
+.card-custom .col {
+    margin-bottom: 50px;
+}
+
