--- a/Upcoming_movies.css
+++ b/Upcoming_movies.css
@@ -179,3 +179,134 @@ p {
     margin-bottom: 50px;
 }
 
+/* Top cast */
+
+
+
+
+
+
+
+
+
+
+
+.container .topcast {
+    color: white;
+    margin-top: 50px;
+    font-family: "Jomhuria", serif;
+    font-size: 70px;
+    text-decoration: underline;
+    margin-bottom: -70px;
+}
+
+.box5 {
+    position: relative;
+    width: 100%;
+    /* Full width of the parent container */
+    height: 200px;
+    /* Fixed height */
+    max-width: 150px;
+    /* Max width for the card */
+    text-align: center;
+    margin-bottom: 70px;
+
+}
+
+.box5:after,
+.box5:before {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #10c6df;
+    position: absolute;
+    top: -80px;
+    left: 15px;
+    opacity: 0;
+    z-index: 1;
+    transition: all .35s ease;
+}
+
+.box5:after {
+    top: auto;
+    left: auto;
+    bottom: -80px;
+    right: 15px
+}
+
+.box5:hover:after,
+.box5:hover:before {
+    opacity: .75;
+    transform: scale(8);
+    transition-delay: .15s
+}
+
+.box5 img {
+    width: 100%;
+    height: 100%;
+    transition: all .35s ease-out 0s
+}
+
+.box5:hover img {
+    opacity: .4
+}
+
+.box5 .icon {
+    margin: 0;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    z-index: 2;
+    transform: scale(0);
+    transition: all .35s ease-out
+}
+
+.box5:hover .icon {
+    transform: scale(1);
+    transition-delay: .15s
+}
+
+.box5 .box-content {
+    padding: 20px 15px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1
+}
+
+.box5 .title {
+    font-size: 20px;
+    font-weight: 800;
+    color: #fff;
+    margin: 0 0 5px;
+    opacity: 0;
+    transform: translate(-20px, -20px);
+    transition: all .35s ease-out
+}
+
+.box5:hover .title {
+    opacity: 1;
+    transform: translate(0, 0);
+    transition-delay: .15s
+}
+
+.box5 .post {
+    display: inline-block;
+    font-size: 16px;
+    color: #fff;
+    opacity: 0;
+    transform: translate(-20px, -20px);
+    transition: all .35s ease-out
+}
+
+.box5:hover .post {
+    opacity: 1;
+    transform: translate(0, 0);
+    transition-delay: .15s
+}
+
+.box6 .title,
+.box6 img,
+.box6:after {
+    transition: all .35s ease 0s
+}
